--- a/public/frontend/css/responsive.css
+++ b/public/frontend/css/responsive.css
@@ -98,7 +98,7 @@
 	}
 	header .menu-mobile .header a {
 	    font-size: 25px;
-	    color: #2b4c4b;
+	    color: #ffffff;
 	}
 
 	header .menu-mobile .header {
