--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -274,7 +274,7 @@ header .header-menu ul li:last-child {
 header .header-menu ul li a {
   display: block;
   text-transform: uppercase;
-  color: #2b4c4b;
+  color: #ffff;
   transition: .3s all;
   font-size: 17px;
   position: relative;
@@ -284,7 +284,7 @@ header .header-menu ul li a:after {
   content: "";
   width: 100%;
   height: 1px;
-  background: #2b4c4b;
+  background: #ffff;
   width: 0;
   position: absolute;
   left: 0;
