--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -2261,7 +2261,7 @@ main #service .feel .slide-feel .swiper-pagination-bullet.swiper-pagination-bull
 
 footer {
   background: #2b4c4b;
-  /* padding-top: 23px; */
+  padding-top: 50px;
 }
 
 footer .click-top {
